# projeto_gcp_batch_dataflow_bigquery

./: README.md  pyproject.toml
src/: download_anac_gcs.py  job_process.py  queries.sql  testes.py
tests/: test_preprocess.py
